@@ -32,6 +32,7 @@
 /public/cache/*
 /public/stylesheets/cache/*
 /public/javascripts/cache/*
+/public/uploads/*
 
 # Other Files
 
