@@ -7,7 +7,7 @@
   </div>
 </div>
 
-<% if user_signed_in? and current_user.administrator? %>
+<% if user_signed_in? and current_user.administrator? and applicant.new_record? %>
   <div class="control-group">
     <%= f.label :password, class: 'control-label' %>
     <div class="controls">
