@@ -5,6 +5,7 @@
   * Applicants now have a "personal statement" to fill out
   * Added requirement for applicants to mail or email 3 recommendation letters
   * Applicants need to confirm their emails before being able to sign in
+  * Applicants can now upload a curriculum vitae
   * Use new Contour login attributes on Registration page
   * Use Contour for User account Confirmations and Unlocks
 
